add delete function

--- a/to-do.html
+++ b/to-do.html
@@ -30,6 +30,11 @@
         <ul id="tasks">
 
         </ul>
+
+        <h2>Completed Tasks:</h2>
+        <ul id="completed-tasks">
+
+        </ul>
       </div>
 
       <div class="col-md-6">
@@ -38,6 +43,12 @@
 
           <p>Name: <span class="name"></span></p>
           <p>Description: <span class="description"></span></p>
+          <!-- <form id="complete-task">
+            <div class="form-group">
+              <button class="btn" id="complete-button" type="submit">Complete</button>
+            </div>
+          </form> -->
+          <a class="btn btn-default complete-task">Complete</a>
         </div>
       </div>
     </div>
